1) move charter from p4-spec, 2) create docs folder to host PDF files

--- a/telemetry/specs/Makefile
+++ b/telemetry/specs/Makefile
@@ -1,16 +1,17 @@
 
 INT=INT
 
-all: build/${INT}.pdf build/${INT}.html
+all: ${INT}.pdf 
 
-build/${INT}.pdf: ${INT}.mdk
+${INT}.pdf: ${INT}.mdk
 	madoko --pdf -vv --odir=build $<
+	cp build/${INT}.pdf ../../docs
 
-build/${INT}.html: ${INT}.mdk
+${INT}.html: ${INT}.mdk
 	madoko -vv --odir=build $<
 
-build/${INT}.pdf: p4.json
-build/${INT}.html: p4.json
+${INT}.pdf: p4.json
+${INT}.html: p4.json
 
 clean:
 	${RM} -rf build
